# container-toolkit-mlx

./: .gitignore  Package.swift  README.md
.github/workflows/: ci.yml
Sources/MLXContainerDaemon/: DaemonMain.swift  InferenceEngine.swift  MLXInferenceServer.swift  ModelManager.swift
Sources/MLXContainerProtocol/: Messages.swift  Service.swift
Sources/MLXContainerRuntime/: ContainerIntegration.swift  GPUDaemonLifecycle.swift  GPUFlags.swift  GPUVsockRelay.swift
Sources/MLXDeviceDiscovery/: AppleGPUDevice.swift
Sources/mlx-cdi-hook/: CDIHookMain.swift
Sources/mlx-ctk/: MLXContainerToolkit.swift
Sources/mlx-ctk/Commands/: CDICommand.swift  ConfigCommand.swift  DeviceCommand.swift  RuntimeCommand.swift  ServiceCommand.swift  StatusCommand.swift
Tests/MLXContainerConfigTests/: ConfigTests.swift
Tests/MLXContainerDaemonTests/: GPUMemoryAllocatorTests.swift  ModelManagerTests.swift
Tests/MLXContainerProtocolTests/: ProtocolTests.swift
Tests/MLXDeviceDiscoveryTests/: DeviceDiscoveryTests.swift
client/: README.md  pyproject.toml
client/mlx_container/: __init__.py  _grpc_client.py  _vsock.py
client/mlx_container/compat/: __init__.py  anthropic.py  openai.py
client/mlx_container/proto/: __init__.py  mlx_container_pb2.py  mlx_container_pb2_grpc.py
client/tests/: conftest.py  test_anthropic_compat.py  test_types.py
examples/hello-mlx/: inference.py
images/: Dockerfile.mlx-base  Dockerfile.mlx-python
tools/: dev-daemon.py
